force-app/main/default/objects/Message__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Contenido completo del mensaje recibido o enviado dentro de la conversación.</description>
    <inlineHelpText>Almacena el texto completo enviado por el prospecto, Agentforce o el asesor.</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>