force-app/main/default/objects/Message__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Canal de mensajería por el que fue recibido o enviado este mensaje.</description>
    <inlineHelpText>Identifica si el mensaje pertenece a WhatsApp, correo electrónico u otro canal integrado.</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>