force-app/main/default/objects/Message__c/fields/Conversation__c.field-meta.xml
<CustomField>
    <fullName>Conversation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Conversación de Dash a la que pertenece este mensaje.</description>
    <inlineHelpText>Relaciona el mensaje con su conversación correspondiente en Dash.</inlineHelpText>
    <label>Conversation</label>
    <referenceTo>Conversation__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>