force-app/main/default/objects/Message__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <description>Indica si el mensaje fue recibido desde el prospecto o enviado desde Dash, Agentforce o un asesor.</description>
    <inlineHelpText>Incoming representa mensajes recibidos del prospecto. Outgoing representa mensajes enviados hacia el prospecto.</inlineHelpText>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incoming</fullName>
            </value>
            <value>
                <fullName>Outgoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>