force-app/main/default/objects/Message__c/fields/External_Message_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Message_ID__c</fullName>
    <description>Identificador único del mensaje proporcionado por el canal de mensajería externo.</description>
    <externalId>true</externalId>
    <inlineHelpText>Permite identificar el mensaje en WhatsApp, correo electrónico u otro canal integrado y evitar duplicados.</inlineHelpText>
    <label>External Message ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>