force-app/main/default/objects/Message__c/fields/Provider_Error__c.field-meta.xml
<CustomField>
    <fullName>Provider_Error__c</fullName>
    <description>Error devuelto por el proveedor al intentar entregar el mensaje.</description>
    <label>Provider Error</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>