force-app/main/default/objects/Message__c/fields/Sender_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Sender_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asesor de Salesforce que envió este mensaje cuando la conversación fue atendida por una persona.</description>
    <inlineHelpText>Identifica al asesor humano responsable de enviar el mensaje.</inlineHelpText>
    <label>Sender Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sent_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>