force-app/main/default/objects/Message__c/fields/Sender_Type__c.field-meta.xml
<CustomField>
    <fullName>Sender_Type__c</fullName>
    <description>Identifica quién generó o envió el mensaje dentro de la conversación.</description>
    <inlineHelpText>Customer representa al prospecto, Agentforce a la IA y Advisor al asesor humano.</inlineHelpText>
    <label>Sender Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Agentforce</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>