force-app/main/default/objects/Message__c/fields/Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Sent_At__c</fullName>
    <description>Fecha y hora real en la que el mensaje fue enviado o recibido en el canal de mensajería.</description>
    <inlineHelpText>Registra la fecha y hora proporcionada por WhatsApp, correo electrónico u otro canal integrado.</inlineHelpText>
    <label>Sent At</label>
    <type>DateTime</type>
</CustomField>