force-app/main/default/objects/Message__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Asunto del mensaje cuando el canal es correo electrónico.</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>